<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/rlParent"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="1dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/userone" />

                    <EditText
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/ivProfile"
                        android:layout_toLeftOf="@+id/ivProfile"
                        android:background="@android:color/transparent"
                        android:gravity="right"
                        android:hint="شو الاخبار؟ ..."
                        android:minLines="1"
                        android:onClick="addPost"
                        android:padding="5dp"
                        android:fontFamily="@font/cairo"
                        android:singleLine="false"
                        android:textColor="#000000" />


                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </RelativeLayout>
                <GridView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/gv"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    android:numColumns="1">

                </GridView>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#dfdfdf"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/cairo"
                            android:text="@string/place"/>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="5dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_action_check_in"/>

                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="#dfdfdf"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/cairo"
                            android:text="@string/video"/>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="5dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_action_upload_video"/>
                    </LinearLayout>


                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="#dfdfdf" />

                    <LinearLayout
                        android:id="@+id/likelayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/cairo"
                            android:text="@string/image"/>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="5dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_action_upload_image"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <com.osamaomar.akhbarak.Assymetric.AsymmetricRecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:divider="@android:color/transparent"
            android:dividerHeight="3dp"
            android:fadingEdge="none"
            android:focusable="false"
            android:gravity="center"
            android:listSelector="#00000000"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        android:scrollbars="vertical" />
    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>