<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:id="@+id/rlParent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/userone" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/ivProfile"
                    android:layout_toLeftOf="@+id/ivProfile"
                    android:gravity="right"
                    android:fontFamily="@font/cairo"
                    android:padding="5dp"
                    android:singleLine="false"
                    android:text="Abhi Patel added 7 new photos Abhi Patel added 7 new photos"
                    android:textColor="#000000"
                     />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTitle"
                    android:layout_toLeftOf="@+id/ivProfile"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:fontFamily="@font/cairo"
                    android:singleLine="true"
                    android:text="منذ 15 دقيقة"
                    android:textColor="#7e7e7e"
                    android:textSize="10sp"
                    android:textStyle="bold"/>

            </RelativeLayout>


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTime"
                android:ellipsize="end"
                android:gravity="right"
                android:paddingRight="15dp"
                android:singleLine="false"
                android:fontFamily="@font/cairo"
                android:text="حادث مروع علي الطريق الدائري "
                android:textColor="#7e7e7e"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:textStyle="bold"/>



            <com.osamaomar.akhbarak.Assymetric.AsymmetricRecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:divider="@android:color/transparent"
                android:dividerHeight="3dp"
                android:fadingEdge="none"
                android:focusable="false"
                android:gravity="center"
                android:listSelector="#00000000"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="تعليق"
                    android:textColor="#a1a1a1"
                    android:fontFamily="@font/cairo"
                    />
                <TextView
                    android:id="@+id/commentsCounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2,539"
                    android:textColor="#b6b6b6"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/cairo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="اعجاب"
                    android:layout_marginLeft="15dp"
                    android:textColor="#a1a1a1"
                    android:fontFamily="@font/cairo"
                    />
                <TextView
                    android:id="@+id/likesCounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3,835"
                    android:textColor="#b6b6b6"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/cairo"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#dfdfdf"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/cairo"
                    android:text="@string/share"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_action_share"/>

                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#dfdfdf"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/cairo"
                        android:text="@string/comment"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_action_comment"/>

                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#dfdfdf"
                    />

                <LinearLayout
                    android:id="@+id/likelayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/cairo"
                        android:text="@string/like"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_action_like"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>